# BGFX-Model-Viewer

./: CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
src/: main.cpp
src/core/: application.cpp  application.h  engine.cpp  engine.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h
src/graphics/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/utils/: camera.cpp  camera.h  layout.h  render_states.h  renderable.cpp  renderable.h  transform.cpp  transform.h
